--- a/package.json
+++ b/package.json
@@ -26,6 +26,8 @@
     "sass": "^1.49.4"
   },
   "dependencies": {
+    "@vimeo/player": "^2.16.3",
+    "lodash.throttle": "^4.1.1",
     "simplelightbox": "^2.10.2"
   }
 }
